# help_service_iot

./: .env.example  .gitignore  LICENSE  README.md  credentials.json  help_words.py  proyectoFinal.py  pyproject.toml  requirements.txt  sos.py
modules/: recording.py
